# VADK

./: .gitignore  .gitmodules  Examination.ipynb  README.md  Untitled.ipynb  inference.sh  requirements.txt  train_d0.sh  train_d0_dnn2.sh  train_d1.sh  train_d1_dnn2.sh  validate_d0.sh  validate_d1.sh
Windows/: trace.py
config/: DGD_1.yaml  GPV32_1.yaml  GPV_1.yaml  GPV_11.yaml  GPV_12.yaml  GPV_13.yaml  GPV_2.yaml  GPV_3.yaml  GPV_4.yaml  GPV_5.yaml  GPV_6.yaml  GPV_7.yaml  GPV_8.yaml  GPV_9.yaml  miso64_2.yaml  miso_1.yaml  miso_1_ver2.yaml  miso_2.yaml  miso_3.yaml  miso_4.yaml  template.yaml  v1.yaml  v2.yaml
cpp/: CMakeLists.txt  main.cpp  pytorch_to_onnx.py  trace.py
cpp/src/: TRT.h
data_prep/: KSpon_split.py  PCM2WAV.py  get_min_length.py  keyboard_valid.py  mix.py  mix_wav.py  norm_concat.py  test.ipynb  test_SNR_mix.ipynb  test_data.py  to16kHz.py
data_prep/AVA-Speech/: AVA_Speech_clean.py  AVA_Speech_convert.py  AVA_Speech_download.py  requirements.txt  retry.txt  test_clean.ipynb  test_pandas.ipynb  test_pydub.ipynb  test_rename.ipynb  test_youtubedl.ipynb
data_prep/AVTR/: README.md  process.py  process_9600ms.py  process_STFT.py  test_label.ipynb
data_prep/AVTR2021/: README.md  convert2mel.py  convert2stft.py  extrach_1ch_n_label.py  split_train_test.py  (+2 more)
libtorch/: .gitignore  CMakeLists.txt  GPV.cmake  GPV.h  test.cpp  test.py  trace.py
src/: VAD_dataset.py  [test]inference.ipynb  [test]post_process.ipynb  dataset.py  dataset_v2.py  inference.py  pp.py  trainer.py  validation.py
tmp/: Examination.ipynb  on_fly_preprocess.ipynb
(+30 files in other folders)
